<resources>
    <string name="app_name">Chinese Calendar</string>
    <string name="about_version">v 1.0.0</string>
    <string name="app_version">1.0.0</string>
    <string name="app_version_code">1</string>
    <string name="app_contact">Email: direction.wfx@gmail.com</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_about">About me</string>

    <string name="drawer_description">navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="content_authority">direction123.calendar</string>

    <string name="title_place_holder">January 1901</string>

    <string name="pref_language_en_label">English</string>
    <string name="pref_language_ch_label">简体中文</string>
    <string name="pref_language_en_value">English</string>
    <string name="pref_language_ch_value">Simplified Chinese</string>
    <string name="pref_lang_key">Language</string>
    <string name="pref_lang_label">Language</string>

    <string name="setting_menu_en">Settings</string>
    <string name="setting_menu_ch">设置</string>
    <string name="about_menu_en">About me</string>
    <string name="about_menu_ch">关于</string>

    <string name="appwidget_text_month">Sep</string>
    <string name="appwidget_text_day">21</string>
    <string name="appwidget_text_luna_day">8/2</string>

    <string name="today_description">jump to today</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
