<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/widget_year_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text_month"
        android:text="@string/appwidget_text_month"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/widget_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text_day"
        android:layout_below="@+id/widget_year_month"
        android:text="@string/appwidget_text_day"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/widget_lunar_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text_luna_day"
        android:layout_below="@+id/widget_day"
        android:text="@string/appwidget_text_luna_day"
        android:background="#fff"
        android:textColor="#000"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"  />

</RelativeLayout>