<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        card_view:cardElevation="@dimen/elevation"
        card_view:cardCornerRadius="@dimen/corner_radius_0">
        <android.support.v7.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/about_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_18"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18"
            android:paddingTop="@dimen/padding_xxxl"/>

        <TextView
            android:id="@+id/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:layout_below="@id/app_name"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="@dimen/padding_m"/>

        <TextView
            android:id="@+id/app_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_contact"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"
            android:paddingBottom="@dimen/padding_xxl"/>

    </RelativeLayout>

</LinearLayout>
